--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-[description]: [Efficiently Amalgamated CNN-Transformer Architecture for Mobile Vision Applications.]
+title: [EdgeNeXt]
+description: [Efficiently Amalgamated CNN-Transformer Architecture for Mobile Vision Applications.]
